<resources>
    <string name="app_name">Presensi</string>
    <string name="instansi">Kancab Kemenag Provinsi Riau</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_checkin">Check In</string>
    <string name="menu_checkout">Check Out</string>

    <string name="home_second">Home Second</string>
    <string name="Splash">Splash</string>
    <string name="logo_instansi">logo instansi</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="latlong">Latitude: %1$.3f Longitude: %2$.3f</string>
    <string name="menu_location">Lokasi</string>
    <string name="lokasi_anda">Lokasi Anda</string>
    <string name="bagikan_lokasi">Bagikan Lokasi</string>
    <string name="lokasi_terakhir_diakses">Terakhir di Update: %s</string>
</resources>
